<?xml version="1.0" encoding="utf-8"?>
<!-- Placeholder item layout for "Recent Activity" RecyclerView -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/activity_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/activity"
        app:tint="@color/green"
        android:background="@drawable/circle_background_gray"
        android:padding="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/profile_picture" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_activity_desc"
            android:textColor="@color/text_primary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_activity_time"
            android:textColor="@color/text_secondary"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>