<?xml version="1.0" encoding="utf-8"?><!-- activity_login.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:padding="24dp">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/logo" />


        <!-- Welcome Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="Welcome Back!"
            android:textColor="@color/green"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:alpha="0.9"
            android:text="Login to continue your journey"
            android:textColor="@color/green"
            android:textSize="14sp" />

        <!-- Login Card -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="24dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/green"
            app:cardBackgroundColor="@android:color/transparent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="32dp">

                <!-- Email Input -->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:cardBackgroundColor="@color/input_background"
                    app:cardCornerRadius="16dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/email_icon"
                            android:padding="10dp"
                            android:src="@drawable/ic_email"
                            app:tint="@color/green" />

                        <EditText
                            android:id="@+id/emailEditText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:fontFamily="sans-serif"
                            android:hint="Email Address"
                            android:inputType="textEmailAddress"
                            android:padding="16dp"
                            android:textColor="@color/green"
                            android:textColorHint="@color/green"
                            android:textSize="16sp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <!-- Password Input -->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:cardBackgroundColor="@color/input_background"
                    app:cardCornerRadius="16dp"
                   >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/password_icon"
                            android:padding="10dp"
                            android:src="@drawable/ic_lock"
                            app:tint="@color/green" />

                        <EditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:fontFamily="sans-serif"
                            android:hint="Password"
                            android:inputType="textPassword"
                            android:padding="16dp"
                            android:textColor="@color/green"
                            android:textColorHint="@color/green"
                            android:textSize="16sp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <!-- Forgot Password -->
                <TextView
                    android:id="@+id/forgotPasswordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="sans-serif-medium"
                    android:padding="8dp"
                    android:text="Forgot Password?"
                    android:textColor="@color/second_green"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <!-- Login Button -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    app:cardBackgroundColor="@color/green"
                    app:cardCornerRadius="16dp"
                    >

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#1D5450"
                        android:fontFamily="sans-serif-medium"
                        android:padding="16dp"
                        android:text="Login"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <!-- Register Link -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account? "
                android:textColor="@color/green"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/registerLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="4dp"
                android:text="Sign Up"
                android:textColor="@color/second_green"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>